Align type rep comments (fixes #19), link extension constructors

--- a/share/ocamlary.css
+++ b/share/ocamlary.css
@@ -79,13 +79,21 @@
 }
 
 /* Type representation indentation */
-.ocamlary-doc .cons,
-.ocamlary-doc .field {
+.ocamlary-doc .cons > td,
+.ocamlary-doc .field > td {
+    padding: 0;
+}
+
+.ocamlary-doc div.cons,
+.ocamlary-doc .cons > td,
+.ocamlary-doc .field td:nth-child(1),
+.ocamlary-doc .field td:nth-child(n+4) {
     padding-left: 1.5em;
 }
 
 /* Fragment highlighting */
-.ocamlary-doc :target * {
+.ocamlary-doc :target *,
+.ocamlary-doc tr div:target {
     background-color: #FFFFCC;
 }
 
@@ -108,7 +116,8 @@
     text-decoration: none;
 }
 
-.ocamlary-doc :hover > a.anchor {
+.ocamlary-doc :hover > a.anchor,
+.ocamlary-doc tr:hover a.anchor {
     visibility: visible;
 }
 
